tests/datakinds/should_compile/DataKind2.hs
{-# LANGUAGE DataKinds #-}

module DataKind2 where

data kind Foo = Bar
