tests/datakinds/should_fail/FailDataKind8.hs
{-# LANGUAGE DataKinds #-}
module FailDataKind8 where

data type Nat = Ze | Su Nat

data kind Test = Foo Nat
